// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretSauce component should match the snapshot 1`] = `
<section
  className="secret-sauce-section"
>
  <header
    className="secret-sauce-header-div"
  >
    <h3>
      Random Word
    </h3>
    <button
      onClick={[Function]}
    >
      <img
        alt="down-arrow"
        className=""
        src="down.svg"
      />
    </button>
  </header>
</section>
`;

exports[`SecretSauce component should match the snapshot if block is opened 1`] = `
<section
  className="secret-sauce-section"
>
  <header
    className="secret-sauce-header-div"
  >
    <h3>
      Random Word
    </h3>
    <button
      onClick={[Function]}
    >
      <img
        alt="down-arrow"
        className="up-btn"
        src="down.svg"
      />
    </button>
  </header>
  <main
    className="secret-sauce-display-div"
  >
    <h2>
      Goose
    </h2>
    <img
      alt="refresh-recycle icon"
      onClick={[Function]}
      src="refresh.svg"
    />
  </main>
</section>
`;
